# TestTaskCADEX

./: CMakeLists.txt  README.md
TTCAD/: CMakeLists.txt  Circle.h  Curve.h  Curves.hpp  Ellipse.cpp  Ellipse.h  Helix.h  TTCAD.cpp  TTCAD.h  Utility.hpp  Vector3.h
TTCAD/Curves/: CMakeLists.txt  Circle.cpp  Curve.h  Ellipse.cpp  Ellipse.h  Helix.cpp  Helix.h  Utility.hpp  Vector3.h
